# codegraph

./: AGENTS.md  Building the IAL Toolchain.md  Cargo.toml  README.md  profiles.toml
codegraph-vscode/: .gitignore  (+6 more)
crates/ast-ifml/: Cargo.toml  build.rs
crates/ast-ifml/src/: db.rs  lib.rs
crates/codegraph/: Cargo.toml
crates/codegraph-backend/: Cargo.toml
crates/codegraph-backend/src/: config.rs  factory.rs  kind.rs  lib.rs
crates/codegraph-backend/tests/: factory_tests.rs
crates/codegraph-config/: Cargo.toml
crates/codegraph-config/src/: config.rs  error.rs  lib.rs  registry.rs  workflow_loader.rs
crates/codegraph-config/tests/: parse_auditable.rs  ui_config_test.rs
crates/codegraph-core/: Cargo.toml
crates/codegraph-core/src/: caching_querier.rs  error.rs  lib.rs  mock.rs  test_fixtures.rs
crates/codegraph-core/src/traits/: ingestor.rs  mod.rs  querier.rs
crates/codegraph-core/src/types/: atproto.rs  codelist.rs  composite.rs  composition.rs  discovery.rs  edge.rs  field_def.rs  ifml.rs  mod.rs  property.rs  schema.rs  stats.rs
crates/codegraph-core/tests/: error_tests.rs  mock_ingest_tests.rs  mock_query_tests.rs  types_tests.rs
crates/codegraph-grafeo/: Cargo.toml
crates/codegraph-grafeo/src/: conversions.rs  engine.rs  ingestor.rs  lib.rs  querier.rs  schema_ddl.rs
crates/codegraph-grafeo/tests/: conformance_tests.rs  engine_tests.rs  grafeo_ingest_tests.rs  grafeo_query_tests.rs
crates/codegraph-ifml-dsl/: Cargo.toml
crates/codegraph-ifml-dsl/src/: ast.rs  parser.rs
crates/codegraph-ifml-dsl/src/grammar/: ifml.pest
crates/codegraph-workflow/: Cargo.toml
crates/codegraph-workflow/src/: approval.rs  definition.rs  delegation.rs  engine.rs  error.rs  guard.rs  lib.rs  service.rs  timer.rs  types.rs
crates/codegraph-workflow/tests/: definition_tests.rs  engine_tests.rs  guard_tests.rs
crates/codegraph/src/: cli.rs  error.rs  lib.rs  main.rs  profile.rs  validate.rs
crates/codegraph/src/classify/: auto_config.rs  mod.rs  naming_rules.rs  output.rs  scoring.rs
crates/codegraph/src/generate/: filter_fields.rs  fix_project_param.py  mod.rs  report.rs  template_engine.rs  traits.rs  type_registry.rs
crates/codegraph/src/ingest/: async_ingest.rs  atproto_projection.rs  ifml_ingest.rs  mod.rs  schema_loader.rs
crates/codegraph/src/lsp/: handlers.rs  mod.rs  state.rs  tests.rs
crates/codegraph/templates/api/: handler.tera  links.tera  media_route.tera  openapi_all.tera  openapi_catalog.tera  openapi_domain.tera  openapi_security.tera  report_handler.tera  report_router.tera  router.tera  workflow_action.tera
crates/codegraph/templates/atproto/: appview_index.tera  appview_ingestor.tera  auth.tera  client.tera  client_scaffold.tera  did_web.tera  handle.tera  lexicon_enum.tera  lexicon_macros.tera  lexicon_object.tera  lexicon_record.tera  rust_enum.tera  rust_record_impl.tera  rust_type.tera  scaffold.tera  xrpc_procedure.tera  xrpc_query.tera  xrpc_router.tera
crates/codegraph/templates/cli/: build_rs.tera  cargo_toml.tera  client.tera  commands_mod.tera  config.tera  domain_command.tera  entity_command.tera  main.tera  output.tera  util.tera
crates/codegraph/templates/codelist/: enum.tera
crates/codegraph/templates/db/: api_key_migration.tera  codelist.tera  deferred_fks.tera  domain_event_trigger.tera  embedding.tera  entity.tera  fts.tera  pgmq_setup.tera  platform_schema.tera  process_history_view.tera  rbac_roles.tera  report_view.tera  rls.tera  seed.tera  table.tera  trigger.tera  workflow_seed.tera
crates/codegraph/templates/ddd/: command.tera  dto_create.tera  dto_included.tera  dto_response.tera  dto_summary.tera  dto_update.tera  event.tera  query.tera  repository.tera
crates/codegraph/templates/domain_types/: cargo_toml.tera  domain_mod.tera  dto_create.tera  dto_response.tera  dto_update.tera  entity_mod.tera  query_service.tera
crates/codegraph/templates/grpc/: proto_message.tera  proto_service.tera
crates/codegraph/templates/hooks/: domain_mod.tera  generated_mod.tera  lifecycle_trait.tera  registry.tera
crates/codegraph/templates/ifml/: page_details.tera  page_form.tera  page_list.tera  page_svelte.tera
crates/codegraph/templates/integration/: catalog_handler.tera  catalog_router.tera  config_struct.tera  dispatcher.tera  rls.tera  seed.tera  tables.tera
crates/codegraph/templates/playwright/: crate_cargo.tera  crate_lib.tera  entity_page.tera  test_data_factory.tera
crates/codegraph/templates/scaffold/: app_state.tera  build_rs.tera  cargo_toml.tera  error.tera  integrations_handler.tera  lib.tera  main.tera  meta.tera  metrics_middleware.tera  middleware.tera  qs_query.tera
crates/codegraph/templates/shared/: filter_help.tera
crates/codegraph/templates/test/: dto_test.tera  entity_test.tera
crates/codegraph/templates/ui/: child_section.tera  codelist_data.tera  descriptor.tera  detail_load.tera  detail_page.tera  domain_layout.tera  edit_load.tera  edit_page.tera  entity_form.tera  entity_store.tera  form_page.tera  list_load.tera  list_page.tera  orgchart_load.tera  orgchart_page.tera  shell_create.tera  shell_detail.tera  shell_edit.tera  shell_list.tera
crates/codegraph/templates/webhook/: api_endpoints.tera  api_router.tera  dispatch.tera
crates/codegraph/tests/: cli_generator_tests.rs  descriptor_gen_tests.rs  generate_tests.rs  grafeo_e2e_tests.rs  grpc_compile_tests.rs  grpc_snapshot_tests.rs  helpers.rs  ifml_e2e_tests.rs  include_snapshot_tests.rs  ingest_tests.rs  profile_smoke_tests.rs  template_harness.rs  ui_generator_tests.rs  validation_tests.rs
crates/codegraph/tests/fixtures/: classifier.toml  domains.toml
crates/codegraph/tests/snapshots/: generate_tests__repo_child_tables.snap  generate_tests__repo_codelist_columns.snap  generate_tests__repo_simple_entity.snap  generate_tests__repo_structured_wrapper.snap  (+9 more)
crates/tree-sitter-ifml/: Cargo.toml  build.rs
crates/tree-sitter-ifml/src/: lib.rs  parser.c
gravy-atproto/: Cargo.toml
gravy-atproto/src/: error.rs  identity.rs  lib.rs  repo.rs  types.rs  validation.rs
gravy-atproto/tests/: integration_test.rs
(+1587 files in other folders)
