[workspace]
resolver = "2"
members = [
    "crates/codegraph",
    "crates/codegraph-core",
    "crates/codegraph-classifier",
    "crates/codegraph-config",
    "crates/codegraph-ext-points",
    "crates/codegraph-grafeo",
    "crates/codegraph-backend",
    "crates/codegraph-naming",
    "crates/codegraph-type-contracts",
    "crates/codegraph-workflow",
    "crates/codegraph-ifml-dsl",
    "crates/ast-ifml",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tera = "1"
clap = { version = "4", features = ["derive"] }
heck = "0.5"
base64 = "0.22"
garde = "0.20"
utoipa = { version = "5", features = ["uuid", "chrono"] }
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
axum = "0.8"
bytes = "1"
lsp-types = "0.97"
tree-sitter = "0.25"
tree-sitter-language = "0.1"
salsa = "0.22"
