[package]
name = "ast-ifml"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
auto-lsp = { version = "0.6", features = ["lsp_server"] }
tree-sitter-ifml = { path = "../tree-sitter-ifml" }
salsa = { workspace = true }

[build-dependencies]
tree-sitter-ifml = { path = "../tree-sitter-ifml" }
auto-lsp-codegen = "0.2"
