[package]
name = "codegraph-config"
version = "0.1.0"
edition = "2021"
description = "Domain configuration parsing for HR Open code generation"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
codegraph-naming = { path = "../codegraph-naming" }
