[package]
name = "codegraph-core"
version = "0.1.0"
edition = "2021"
description = "Engine-agnostic graph database traits and types for codegraph"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
codegraph-naming = { path = "../codegraph-naming" }
codegraph-type-contracts = { path = "../codegraph-type-contracts" }
rust_decimal = { version = "1", features = ["serde-with-str"] }

[features]
test-fixtures = []

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
