[package]
name = "codegraph-grafeo"
version = "0.1.0"
edition = "2021"
description = "Grafeo graph database adapter for codegraph-core traits"

[dependencies]
codegraph-core = { path = "../codegraph-core" }
codegraph-naming = { path = "../codegraph-naming" }
codegraph-type-contracts = { path = "../codegraph-type-contracts" }
grafeo = "=0.5.33"
grafeo-engine = "=0.5.33"
grafeo-core = "=0.5.33"
grafeo-common = "=0.5.33"
grafeo-adapters = "=0.5.33"
async-trait = "0.1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
uuid.workspace = true
serde_json.workspace = true

[dev-dependencies]
codegraph-core = { path = "../codegraph-core", features = ["test-fixtures"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
