[package]
name = "codegraph-ifml-dsl"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
pest = "2"
pest_derive = "2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pest = { version = "2", features = ["pretty-print"] }
