[package]
name = "codegraph"
version = "0.1.0"
edition = "2021"

[features]
e2e = []

[dependencies]
codegraph-naming = { path = "../codegraph-naming" }
codegraph-classifier = { path = "../codegraph-classifier" }
codegraph-type-contracts = { path = "../codegraph-type-contracts" }
codegraph-config = { path = "../codegraph-config" }
codegraph-core = { path = "../codegraph-core" }
codegraph-backend = { path = "../codegraph-backend" }
codegraph-ext-points = { path = "../codegraph-ext-points" }
codegraph-ifml-dsl = { path = "../codegraph-ifml-dsl" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tera = "1"
tempfile = "3"
heck = "0.5"
walkdir = "2"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
uuid = { version = "1", features = ["v5"] }
pathdiff = "0.2"
ast-ifml = { path = "../ast-ifml" }
tree-sitter-ifml = { path = "../tree-sitter-ifml" }
auto-lsp = { version = "0.6", features = ["lsp_server"] }
syn = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
codegraph-grafeo = { path = "../codegraph-grafeo" }
tempfile = "3"
insta = { version = "1", features = ["glob"] }
syn = { version = "2", features = ["full", "parsing"] }
proc-macro2 = "1"
