[package]
name = "tree-sitter-ifml"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-language = { workspace = true }

[build-dependencies]
cc = "1"
